--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "@types/node": "^20.10.6",
     "git-commit-msg-linter": "^5.0.6",
+    "husky": "^9.1.1",
+    "lint-staged": "^15.2.7",
     "typescript": "^5.3.3"
   }
 }
