--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:staged": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "ts-jest": "^29.2.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
