--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.10.6",
+    "@types/validator": "^13.12.0",
     "git-commit-msg-linter": "^5.0.6",
     "husky": "^9.1.1",
     "jest": "^29.7.0",
@@ -23,5 +24,8 @@
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "validator": "^13.12.0"
   }
 }
