--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.3.2",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.10.6",
     "@types/validator": "^13.12.0",
     "git-commit-msg-linter": "^5.0.6",
@@ -28,6 +30,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "mongodb": "^6.8.0",
     "validator": "^13.12.0"
   }
 }
