--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@types/jest": "^29.5.12",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.10.6",
+    "@types/supertest": "^6.0.2",
     "@types/validator": "^13.12.0",
     "git-commit-msg-linter": "^5.0.6",
     "husky": "^9.1.1",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "sucrase": "^3.35.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
