--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "sucrase-node src/main/server.ts",
+    "start": "node dist/main/server.js",
+    "build": "rimraf dist && tsc",
+    "dev": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.ts",
@@ -28,6 +30,7 @@
     "husky": "^9.1.1",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
+    "rimraf": "^6.0.1",
     "sucrase": "^3.35.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.3",
@@ -37,7 +40,6 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
-    "fast-glob": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "validator": "^13.12.0"
