--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,12 @@ services:
     build: .
     image: clean-node
     restart: always
-    command: npm start
+    command: npm run debug
     volumes:
       - ./dist:/usr/src/clean-node/dist
+      - ./package.json:/usr/src/clean-node/package.json
     ports:
       - "5050:5050"
+      - "9222:9222"
     links:
       - mongo
