--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     restart: always
     command: bash -c "npm install --only=prod && npm run debug -- --no-source-maps"
     volumes:
-      - ./dist:/usr/src/clean-node/dist
+      - ./dist/:/usr/src/clean-node/dist/
       - ./package.json:/usr/src/clean-node/package.json
     ports:
       - "5050:5050"
